--- a/frontend/styles/blocks/_service.scss
+++ b/frontend/styles/blocks/_service.scss
@@ -114,11 +114,7 @@
       display: flex;
       justify-content: space-between;
       gap: rem(40);
-      min-height: rem(527);
-
-      @include laptop{
-        align-items: center;
-      }
+      min-height: rem(480);
 
       @include tablet{
         flex-direction: column;
@@ -128,7 +124,7 @@
     }
 
     &-main{
-      width: 50%;
+      width: 90%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -182,7 +178,6 @@
     &-features{
       display: flex;
       column-gap: rem(15);
-      margin-bottom: rem(54);
 
       @include tablet{
         margin-bottom: rem(32);
@@ -274,6 +269,7 @@
     transform-origin: center top;
     &-wrap{
       width: 100%;
+      height: fit-content;
       transform: translateZ(0);
       isolation: isolate;
     }
