refactor: form, sliders, header

--- a/frontend/styles/_variables.scss
+++ b/frontend/styles/_variables.scss
@@ -23,11 +23,7 @@
   --color-blue-600: #368DFF;
   --color-blue-700: #197CFF;
 
-  --color-blue-vk: #0077FF;
-  --gradient-tg: linear-gradient(180deg, #2aabee 0%, #229ed9 100%);
-  --gradient-inst: linear-gradient(180deg, #c51ea9 0%, #d22097 29.33%, #e75d5a 69.89%, #f2a328 100%);
-  --gradient-gray: linear-gradient(148deg, rgba(42, 42, 42, 0.3) 17.79%, rgba(42, 42, 42, 0.3) 100%);;
-
+  --color-red: #dc3545;
 
   --font-family: 'TT Firs Neue', sans-serif;
   --font-family-accent: 'Noah', sans-serif;
