--- a/frontend/styles/_globals.scss
+++ b/frontend/styles/_globals.scss
@@ -2,7 +2,7 @@
 
 html{
   &.is-lock{
-    overflow: hidden;
+    // overflow: hidden;
   }
 }
 
@@ -27,6 +27,14 @@ main{
 .overflow-wrapper {
   overflow-x: hidden;
 }
+
+.input-error {
+  border: 1px solid var(--color-orange) !important;
+  &:focus-visible {
+    outline: 1px solid var(--color-orange) !important;
+  }
+}
+
 
 h1,
 h3,
