--- a/frontend/styles/blocks/_review-button.scss
+++ b/frontend/styles/blocks/_review-button.scss
@@ -19,7 +19,7 @@
       right: -10px;
       position: absolute;
       height: rem(32);
-      border-radius: 50%;
+      border-radius: rem(5);
       width: 1px;
       background-color: var(--color-gray-50);
     }
