Fixed url for img employee

--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -614,7 +614,7 @@
                         {% for emp in employee %}
                         <li class="team__splide-slide splide__slide">
                             <img
-                                    src="{{ emp.photo }}"
+                                    src="{{ emp.photo.url }}"
                                     alt=""
                                     class="team__img"
                                     width="307" height="370" 
