--- a/frontend/styles/blocks/_modal.scss
+++ b/frontend/styles/blocks/_modal.scss
@@ -6,6 +6,19 @@
   inset: 0;
   z-index: 1000;
 
+  &__wrapper {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: rem(640);
+
+    @include tablet {
+      max-width: 100%;
+      width: 90%;
+    }
+  }
+
   &__close-button{
       @include reset-button;
       position: absolute;
@@ -52,23 +65,18 @@
   }
 
   &__content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
     border: 1px solid var(--color-blue);
     background: var(--color-white);
     padding: rem(40);
     border-radius: rem(20);
-    max-width: rem(640);
+    z-index: 10;
 
     display: flex;
     flex-direction: column;
     row-gap: rem(40);
 
     @include tablet{
-      max-width: 100%;
-      width: 90%;
       padding: rem(32) rem(20);
     }
   }
