--- a/frontend/styles/blocks/_policy.scss
+++ b/frontend/styles/blocks/_policy.scss
@@ -21,6 +21,7 @@
   &__checkbox{
     position: relative;
     min-width: rem(19);
+    max-width: rem(19);
     aspect-ratio: 1;
     appearance: none;
     border: 1px solid var(--color-blue);
