--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -115,7 +115,10 @@
             </div>
         </div>
     </header>
-    <main>
+    <div id="loader-overlay">
+        <div class="loader"></div>
+    </div>
+    <main id="main" class="blurred">
         <div class="overflow-wrapper">
             <section class="hero">
                 <div class="hero__main hidden-tablet">
@@ -221,7 +224,7 @@
                                     <div class="hero__splide-slide-inner">
                                         <video
                                                 src="{{ video.video.url }}"
-                                                preload="metadata"
+                                                preload="auto"
                                                 muted
                                                 playsinline
                                                 loop
